deploy/retrieveUnpackaged/objects/SFDC_Script__c.object
<CustomObject>
    <description>Contains the questions, question order, and passing score information</description>
    <fields>
        <fullName>Available_With__c</fullName>
        <label>Available With</label>
        <picklist>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01550000000VdV0&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passing_Score__c</fullName>
        <description>The number of points the question taking the script has to earn to pass the script.</description>
        <label>Passing Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Script_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Use_Scoring__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Scoring</label>
        <type>Checkbox</type>
    </fields>
    <label>Script</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Script_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>